--- a/app/src/main/res/layout/request_items.xml
+++ b/app/src/main/res/layout/request_items.xml
@@ -5,13 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="266dp"
+    android:layout_height="245dp"
     app:cardBackgroundColor="#EBFCFCC4"
     app:cardCornerRadius="20dp"
     app:cardElevation="5dp"
     app:cardPreventCornerOverlap="false"
-    app:cardUseCompatPadding="true"
     app:contentPadding="5dp"
+    android:layout_marginVertical="10dp"
     app:layout_goneMarginBottom="1dp">
 
     <android.support.constraint.ConstraintLayout
@@ -81,7 +81,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
-            android:drawableLeft="@drawable/settings_gear"
+            android:drawableLeft="@drawable/ic_today"
             android:drawablePadding="4dp"
             android:text="Leaving Date"
             android:textSize="20sp"
@@ -99,7 +99,7 @@
             android:layout_height="26dp"
             android:layout_marginStart="13dp"
             android:layout_marginEnd="32dp"
-            android:drawableLeft="@drawable/settings_gear"
+            android:drawableLeft="@drawable/ic_today"
             android:drawablePadding="4dp"
             android:text="Return Date"
             android:textSize="20sp"
@@ -115,6 +115,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:drawableLeft="@drawable/ic_place"
             android:layout_marginBottom="8dp"
             android:text="FROM"
             android:textSize="22sp"
@@ -133,6 +134,7 @@
             android:layout_marginEnd="8dp"
             android:text="TO"
             android:textSize="22sp"
+            android:drawableLeft="@drawable/ic_place"
             app:fontFamily="sans-serif-medium"
             app:layout_constraintBaseline_toBaselineOf="@+id/textViewFrom"
             app:layout_constraintEnd_toEndOf="parent"
