--- a/app/src/main/res/menu/menu_warden.xml
+++ b/app/src/main/res/menu/menu_warden.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<item
-        android:id="@+id/action_settings_warden"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-    android:icon="@drawable/settings_gear"
-        app:showAsAction="never" />
+    <!--<item-->
+    <!--android:id="@+id/action_settings_warden"-->
+    <!--android:orderInCategory="100"-->
+    <!--android:title="@string/action_settings"-->
+    <!--android:icon="@drawable/settings_gear"-->
+    <!--app:showAsAction="never" />-->
     <item
         android:id="@+id/logout_warden_menu"
+        android:icon="@drawable/logout"
         android:title="@string/logout"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/logout"/>
+        app:showAsAction="ifRoom" />
 
 </menu>
