--- a/app/src/main/res/menu/activity_warden_drawer.xml
+++ b/app/src/main/res/menu/activity_warden_drawer.xml
@@ -3,8 +3,11 @@
     <group android:checkableBehavior="single">
         <item android:id="@+id/hostelOutpasses" android:icon="@drawable/email"
             android:title="Hostel outpasses"/>
+        <item android:id="@+id/pendingOutpasses" android:icon="@drawable/email"
+            android:title="Pending outpasses"/>
         <item android:title="My students" android:icon="@drawable/password_lock"
             android:id="@+id/myStudentsItem"/>
+
         <item android:icon="@drawable/logout" android:title="Log out" android:id="@+id/logout_warden_nav"/>
 
     </group>
