--- a/app/src/main/res/layout/fragment_login_student.xml
+++ b/app/src/main/res/layout/fragment_login_student.xml
@@ -67,4 +67,11 @@
 
         android:text="New User? Signup"
         android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/tvForgot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text= "Forgot Password"
+        android:textSize="24dp"/>
 </LinearLayout>
