--- a/app/src/main/res/layout/list_layout_my_students.xml
+++ b/app/src/main/res/layout/list_layout_my_students.xml
@@ -23,7 +23,7 @@
 
             <TextView
                 android:id="@+id/nameCardmy"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_toRightOf="@id/profPicCardmy"
