--- a/app/src/main/res/menu/activity_caretaker_drawer.xml
+++ b/app/src/main/res/menu/activity_caretaker_drawer.xml
@@ -7,6 +7,11 @@
             android:id="@+id/myStudentsItem"/>
 
         <item
+            android:id="@+id/navEditCaretaker"
+            android:icon="@drawable/ic_edit_profile"
+            android:title="Edit Profile"/>
+
+        <item
             android:title="All outpasses" android:icon="@drawable/crop_image_menu_flip"
             android:id="@+id/allOutpassesItem"/>
         <item android:icon="@drawable/logout" android:title="Log out" android:id="@+id/logout_warden_nav"/>
