--- a/app/src/main/res/layout/request_items.xml
+++ b/app/src/main/res/layout/request_items.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="245dp"
+    android:layout_height="wrap_content"
     app:cardBackgroundColor="#EBFCFCC4"
     app:cardCornerRadius="20dp"
     app:cardElevation="5dp"
@@ -16,7 +16,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="235dp"
+        android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="4dp"
         tools:layout_editor_absoluteY="4dp">
 
@@ -77,69 +77,76 @@
             android:id="@+id/textViewLeavingDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="41dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
             android:drawableLeft="@drawable/ic_today"
             android:drawablePadding="4dp"
             android:text="Leaving Date"
-            android:textSize="20sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textSize="18sp"
             app:fontFamily="sans-serif-medium"
             app:layout_constraintBottom_toTopOf="@+id/deny"
             app:layout_constraintEnd_toStartOf="@+id/textViewReturnDate"
-            app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/StudentImage"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textViewReturnDate"
-            android:layout_width="132dp"
-            android:layout_height="26dp"
-            android:layout_marginStart="13dp"
-            android:layout_marginEnd="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="48dp"
+            android:layout_marginBottom="8dp"
             android:drawableLeft="@drawable/ic_today"
             android:drawablePadding="4dp"
             android:text="Return Date"
-            android:textSize="20sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textSize="18sp"
             app:fontFamily="sans-serif-medium"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textViewLeavingDate"
+            app:layout_constraintBottom_toTopOf="@+id/accept"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textViewLeavingDate" />
+            app:layout_constraintStart_toEndOf="@+id/textViewLeavingDate"
+            app:layout_constraintTop_toBottomOf="@+id/StudentImage" />
 
         <TextView
             android:id="@+id/textViewFrom"
-            android:layout_width="119dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="16dp"
             android:drawableLeft="@drawable/ic_place"
-            android:layout_marginBottom="8dp"
             android:text="FROM"
             android:textSize="22sp"
             app:fontFamily="sans-serif-medium"
             app:layout_constraintBottom_toTopOf="@+id/textViewLeavingDate"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.449"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewName" />
+            app:layout_constraintEnd_toStartOf="@+id/textViewTo"
+            app:layout_constraintStart_toEndOf="@+id/StudentImage"
+            app:layout_constraintTop_toBottomOf="@+id/textViewName"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/textViewTo"
-            android:layout_width="130dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="16dp"
+            android:drawableLeft="@drawable/ic_place"
             android:text="TO"
             android:textSize="22sp"
-            android:drawableLeft="@drawable/ic_place"
             app:fontFamily="sans-serif-medium"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textViewFrom"
+            app:layout_constraintBottom_toTopOf="@+id/textViewReturnDate"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/textViewFrom" />
+            app:layout_constraintStart_toEndOf="@+id/textViewFrom"
+            app:layout_constraintTop_toBottomOf="@+id/textViewName"
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
 
@@ -164,13 +171,16 @@
             android:layout_width="135dp"
             android:layout_height="36dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginBottom="8dp"
             android:background=" #25CEA3"
             android:text="Accept"
             android:textSize="22sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/deny"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/deny" />
+            app:layout_constraintStart_toEndOf="@+id/deny"
+            app:layout_constraintTop_toBottomOf="@+id/textViewReturnDate" />
 
 
     </android.support.constraint.ConstraintLayout>
